--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
   <input type="text" class="input-field"  autocomplete="off" placeholder="Enter the country name" />
 
-  <ul class="countries-list"></ul>
+  <ul class="countries-list country-item"></ul>
  
 
   <script src="./index.js"></script>
